--- a/SFM/SFM.vcxproj.filters
+++ b/SFM/SFM.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="src\SFMAPI.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\OutputToFile.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Image.h">
@@ -48,6 +51,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\SFMAPI.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\OutputToFile.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
